fix avatar object-fit, text contrast

--- a/react-chat/src/modules/chat/ChatItem/ChatItem.scss
+++ b/react-chat/src/modules/chat/ChatItem/ChatItem.scss
@@ -20,7 +20,7 @@
 
 .chat-message p {
     margin: 0;
-	color: gray;
+	color: #4F4F4F;
 }
 
 .chat-name {
@@ -37,7 +37,7 @@
 
 .chat-time {
 	font-size: 12px;
-	color: gray;
+	color: #4F4F4F;
 	margin-right: 3px;
 }
 
